# lean_claw

./: .clang-format  .gitignore  LICENSE  readme.md  readme_en.md
agent/: agent_config.h  agent_core.c  agent_core.h
agent/channels/cli/: cmd_chat.c  cmd_chat.h
agent/channels/feishu/: feishu_bot.c  feishu_bot.h
agent/exec/: exec_scheduler.c  exec_scheduler.h  exec_thread.c  exec_thread.h  exec_timer.c  exec_timer.h  executor.c  executor.h
agent/llm/: llm_access.c  llm_access.h  llm_adapter.c  llm_adapter.h
agent/llm/adapter/: apt_chatgpt.c  apt_chatgpt.h  apt_deepseek.c  apt_deepseek.h  apt_qwen.c  apt_qwen.h
agent/skill/: skill.c  skill.h
agent/utils/: utils_dynamic_buffer.c  utils_dynamic_buffer.h  utils_list.c  utils_list.h  utils_log.h
app/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
app/main/: CMakeLists.txt  Kconfig  main_example.c
console/: cmd_wifi.c  cmd_wifi.h  console.c  console.h
tool/: tool_cid_def.h  tool_collection.c  tool_collection.h  tool_gpio.c  tool_pwm.c  tool_system.c
